删除没用的文件以减少仓库大小

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,42 @@
 obj/*
+
 bin/*
+
 /.vs/*
+
 /iOS.App.Delegate/obj/*
+
 /iOS.App.Delegate/bin/*
+
 /iOS.App.Delegate/*.bak
+
 /iOS.App/obj/*
+
 /iOS.App/bin/*
+
 /iOS_App/obj/*
+
 /iOS_App/bin/*
+
 /iOS.Corelib/obj/*
+
 /iOS.Corelib/bin/*
+
 README.txt
+
 *.user
+
 *.USER
+
 *.userprefs
+
 *.USERPREFS
+
 *.DS_Store
+
 */.vs/*
+donet/bin/*
+donet/PasswordKeeper/.vs/*
+donet/PasswordKeeper/obj/*
+donet/PasswordKeeper.WebApi/obj/*
+donet/TestConsole/obj/*
