--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,21 @@
 obj/*
-
 bin/*
-
 /.vs/*
-
 /iOS.App.Delegate/obj/*
-
 /iOS.App.Delegate/bin/*
-
 /iOS.App.Delegate/*.bak
-
 /iOS.App/obj/*
-
 /iOS.App/bin/*
-
 /iOS_App/obj/*
-
 /iOS_App/bin/*
-
 /iOS.Corelib/obj/*
-
 /iOS.Corelib/bin/*
-
 README.txt
-
 *.user
-
 *.USER
-
 *.userprefs
-
 *.USERPREFS
-
 *.DS_Store
-
 */.vs/*
 donet/bin/*
 donet/PasswordKeeper/.vs/*
@@ -42,3 +24,4 @@ donet/PasswordKeeper.WebApi/obj/*
 donet/TestConsole/obj/*
 donet/BackDoorWebApi/bin/*
 donet/BackDoorWebApi/obj/*
+donet/*.suo
